feat(push): port WebPush implementation from Nagram/Mercurygram
Replace the unreliable PUSH_TYPE_SIMPLE (token_type=4) wake-up-only
push path with full WebPush encryption (token_type=10) using the
Mercurygram/Nagram implementation.

Changes:

UnifiedPushService.java (full rewrite):
- WebPush ECDH P-256 keypair generation and persistence
- onNewEndpoint: registers PUSH_TYPE_WEB via /aesgcm gateway that
  serializes WebPush headers into the body (UP distributors strip them)
- onNewEndpoint: also registers PUSH_TYPE_SIMPLE as secondary channel
  for secret chats and payload-less events
- onMessage: decrypts WebPush payload locally via WebPushDecryptor,
  feeds into processRemoteMessage (same path as FCM)
- onMessage: falls back to resumeNetworkMaybe if decryption fails
- Reference-counted PowerManager.WakeLock (30s) keeps CPU alive during
  decrypt+process, replaces the old CountDownLatch that could deadlock
- Removed ntfy special case that bypassed WebPush entirely
- Fixed PUSH_TYPE in onRegistrationFailed/onUnregistered (was SIMPLE,
  now WEB to match registration)

PushListenerController.java:
- Added PUSH_TYPE_WEB = 10 constant
- Added sendSimplePushRegistration/unregisterSimplePush for the
  secondary token_type=4 channel

MessagesController.java:
- Added registerSimplePush/unregisterSimplePush methods

UnifiedPushListenerServiceProvider.java:
- getPushType() returns PUSH_TYPE_WEB (was PUSH_TYPE_SIMPLE)

NaConfig.kt:
- Added 4 config items for WebPush key storage

WebPushDecryptor.java (new file):
- Ported from Mercurygram (it.belloworld.mercurygram.WebPushDecryptor)
- Implements aesgcm Draft 4 decryption

This eliminates the 30-minute Doze failure: the notification content
is in the push itself, no MTProto reconnection required.